# ipa-hcc

./: .gitignore  .gitlab-ci.yml  .gitlab-idm-ci.yml  .yamllint.yaml  CONTRIBUTORS.txt  EPHEMERAL.md  MANIFEST.in  Makefile  README.md  ansible.cfg  install.sh  ipa-consoledot.spec  ipa-consoledot.spec.rpkg  ipa-hcc.rpmlintrc  ipa-hcc.spec.rpkg  ipahcc_auto_enrollment.py  pylintrc  pyproject.toml  requirements.txt  tests.py  tox.ini
.github/workflows/: main.yml
apache/: consoledot.conf  ipa-hcc.conf
client/: ipa-consoledot-enrollment.py  ipa-consoledot-enrollment.service  ipa-enroll-consoledot.service  ipa-hcc-auto-enrollment  ipa-hcc-auto-enrollment.py  ipa-hcc-auto-enrollment.service  ipa-pkinit-keytab  ipa-pkinit-keytab.py  ipa_enroll_consoledot.py
contrib/: convert_schema.py  create-rhel-vms.sh
contrib/1minutetip/: README.md
contrib/ci-image/: Containerfile  Containerfile.7  Containerfile.8  Containerfile.9  Containerfile.fedora  Makefile  README.md
etc/ipa/: hcc.conf
gssproxy/: 85-consoledot-enrollment.conf
idm-ci/: README.md  secrets.compose.example  secrets.ephemeral.example  secrets.example
idm-ci/config/: hmsidm-config-env.yaml  hmsidm-config.yaml
idm-ci/metadata/: hmsidm-auto-enrollment-metadata.yaml  hmsidm-auto-enrollment.yaml  hmsidm-dev-ad.yaml  hmsidm-dev-backend.yaml  hmsidm-dev.yaml  hmsidm-domains-backend.yaml  hmsidm-ephemeral.yaml  hmsidm-permanent.yaml  hmsidm-rhel79.yaml  hmsidm-rhel87.yaml  hmsidm-rhel92-backend.yaml  hmsidm-rhel92.yaml
idm-ci/playbooks/: fetch-logs.yaml  hmsidm-ad-prep.yaml  hmsidm-auto-enrollment.yaml  hmsidm-check-env.yaml  hmsidm-configure.yaml  hmsidm-dump-hosts.yaml  hmsidm-enable-copr.yaml  hmsidm-fix-forwarders.yaml  hmsidm-install-packages.yaml  hmsidm-local-rpms.yaml  hmsidm-post-configure.yaml  hmsidm-pre-configure.yaml  hmsidm-rpkg-local.yaml  hmsidm-test.yaml  idm-domains-backend-deploy.yaml  idm-domains-backend-test.yaml  idm-domains-backend.yaml  rhc-connect.yaml  rhc-disconnect.yaml
install/: consoledot-enrollment-getkeytab  ipa-consoledot-krb5conf.py  ipa-consoledot-krb5conf.service  ipa-consoledot.service
install/client/: ipa-hcc-auto-enrollment
install/server/: ipa-hcc  ipa-hcc-dbus  redhat-candlepin-bundle.pem
ipaclient/hcc/: __init__.py  auto_enrollment.py  pkinit_keytab.py
ipahcc/: __init__.py  hccplatform.py
ipahcc/client/: auto_enrollment.py
ipahcc/mockapi/: __init__.py  wsgi.py
ipaplatform/: consoledotplatform.py  hccplatform.py
rhsm/: candlepin-redhat-ca.pem  cross_sign_candlepin.py  hmsidm-ca-bundle.pem  hmsidm-candlepin-ca.pem  hmsidm-candlepin-r2-ca.pem  hmsidm-root-ca.pem
schema.d/: 85-consoledot.ldif  85-hcc.ldif  89-consoledot.ldif
server/: ipa-hcc
stubs/: README.md
tests/: 89-testdata.update  README.md  conftest.py  install-testdata.sh  pkinit_candlepin.conf  test-pkinit.sh  test_autoenrollment.py  test_framework.py  test_hccapi.py  test_ipaserver.py  test_mockapi.py  test_registration.py  test_token.py  tests.py
updates/: 85-consoledot.update  85-hcc.update  89-consoledot.update
wsgi/: consoledot.py  consoledotwsgi.py  hcc_mockapi.py  hcc_registration_service.py
(+135 files in other folders)
